add basic style framework

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- stylesheets -->
-    <link rel="stylesheet" href="css/meyerReset.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="app/css/meyerReset.css">
+    <link rel="stylesheet" href="app/css/master.css">
 
     <!-- 1. Load libraries -->
      <!-- Polyfill for older browsers -->
