add loading gif

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </script>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <navbar>Loading...</navbar>
+    <data>
+      <img class="loadingGif" src="app/images/loading-cube.gif">
+    </data>
   </body>
 </html>
