move date input fields

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   </head>
   <body>
     <navbar>Loading...</navbar>
-    <data>
-      <img class="loadingGif" src="app/images/loading-cube.gif">
-    </data>
+    <data [dateIn]='dates'><img class="loadingGif" src="app/images/loading-cube.gif"></data>
+
   </body>
 </html>
